# autogroceries

./: .buildinfo  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  changelog.html  conduct.html  contributing.html  genindex.html  index.html  mkdocs.yml  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: test_deploy.yml
_modules/: index.html
_modules/autogroceries/shopper/: SainsburysShopper.html  Shopper.html
_modules/autogroceries/utils/: pause.html
_sources/autoapi/: index.rst.txt
_sources/autoapi/autogroceries/: index.rst.txt
api/: index.html
autoapi/: index.html
autoapi/autogroceries/: index.html
autoapi/autogroceries/shopper/: index.html
autoapi/autogroceries/utils/: index.html
changelog/: index.html
docs/: Makefile  conf.py  example.ipynb  make.bat
figs/: autogroceries_ex.m4v
search/: search_index.json
src/autoceries/: __init__.py  autoceries.py  browser.py
src/autoceries/browser/: Browser.py  SainsburyBrowser.py  __init__.py
src/autogroceries/: __init__.py  __main__.py  cli.py  logging.py  pause.py  shopper.py
src/autogroceries/browser/: Browser.py  SainsburyBrowser.py  __init__.py
src/autogroceries/selector/: SainsburySelector.py  Selector.py  __init__.py
src/autogroceries/shopper/: SainsburyShopper.py  SainsburysShopper.py  Shopper.py  __init__.py  (+3 more)
tests/: test_Browser.py  test_SainsburyBrowser.py  test_SainsburyShopper.py  test_Shopper.py  test_autoceries.py  test_browser.py  test_cli.py  test_logging.py  test_pause.py  test_shopper.py
(+9 files in other folders)
