[tool.poetry]
name = "autogroceries"
version = "1.0.2"
description = "Automate your grocery shop"
authors = ["David Zhang"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.3.0"
pandas = "^1.4.3"
webdriver-manager = "^3.8.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
