[project]
name = "autogroceries"
version = "1.0.3"
description = "Automate your grocery shop."
authors = [
    { name = "David Zhang" },
]
requires-python = ">=3.13"
dependencies = [
    "playwright==1.54.0",
    "python-dotenv==1.1.1",
]

[project.optional-dependencies]
dev = [
    "pre-commit==4.3.0",
    "pytest==8.4.1",
    "pytest-cov==6.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["pip>=22.0", "setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
